# Ferrite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
assets/icons/: generate_icons.py
docs/: branding.md  building.md  index.md
docs/technical/: about-help.md  adaptive-toolbar.md  app-state.md  click-to-edit-formatting.md  config-persistence.md  custom-title-bar.md  dead-code-cleanup.md  document-export.md  editable-code-blocks.md  editable-links.md  editable-tables.md  editable-widgets.md  editor-widget.md  eframe-window.md  emphasis-rendering.md  error-handling.md  file-dialogs.md  find-replace.md  font-system.md  formatting-toolbar.md  keyboard-shortcuts.md  line-number-alignment.md  line-numbers.md  markdown-parser.md  outline-panel.md  project-setup.md  recent-files.md  ribbon-ui.md  settings-config.md  settings-panel.md  status-bar.md  sync-scrolling.md  syntax-highlighting.md  tab-system.md  text-statistics.md  theme-system.md  tree-viewer.md  undo-redo.md  view-mode-persistence.md  window-resize.md  (+3 more)
src/: app.rs  error.rs  fonts.rs  main.rs  state.rs  string_utils.rs
src/config/: mod.rs  persistence.rs  settings.rs
src/editor/: find_replace.rs  line_numbers.rs  mod.rs  outline.rs  stats.rs  widget.rs
src/export/: clipboard.rs  html.rs  mod.rs  options.rs
src/files/: dialogs.rs  mod.rs
src/markdown/: ast_ops.rs  editor.rs  formatting.rs  mod.rs  parser.rs  syntax.rs  tree_viewer.rs  widgets.rs
src/preview/: mod.rs  sync_scroll.rs
src/theme/: dark.rs  light.rs  (+2 more)
(+18 files in other folders)
